--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,11 +2,6 @@
 ---
 
 @import "{{ site.theme }}";
-.page-header {
-  color: #000;
-  text-align: center;
-  background-color: #000;
-}
 
 .main-content {
     h1, h2, h3, h4, h5, h6 {
@@ -15,4 +10,10 @@
         font-weight: normal;
         color: #000;
     }
+}
+.page-header {
+  color: #000;
+  text-align: center;
+  background-color: #000;
+  background-image: none;
 }
