--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,8 +12,8 @@
     }
 }
 .page-header {
-  color: #000;
+  color: #fff;
   text-align: center;
   background-color: #000;
-  background-image: none;
+  background-image: linear-gradient(to bottom, #000, #000);
 }
