--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,3 +17,7 @@
   background-color: #000;
   background-image: linear-gradient(to bottom, #000, #000);
 }
+
+.project-name, project-tagline {
+    color: #fff;
+}
