--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,14 +10,27 @@
         font-weight: normal;
         color: #000;
     }
+
+    p {
+      color: #222;
+    }
 }
 .page-header {
   color: #fff;
   text-align: center;
   background-color: #000;
-  background-image: linear-gradient(to bottom, #000, #000);
+  background-image: url(sp-header.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.project-name, project-tagline {
+.project-name, .project-tagline {
     color: #fff;
+    text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+}
+
+.btn {
+  color: rgb(0,0,0);
+  background-color: rgba(255,255,255,0.5);
+  border-color: rgba(255,255,255,0.2);
 }
