--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@
   color: #fff;
   text-align: center;
   background-color: #000;
-  background-image: url(sp-header.jpg);
+  background-image: url(header.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
